--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 
 <body>
   <header class="header">
-
+    <img src="images/trybewarts-header-logo.svg" alt="" class="trybewarts-header-logo">
+    <form action="" class="trybewarts-login">
+      <input type="email" name="email" id="" placeholder="Email">
+      <input type="number" name="password" id="" placeholder="Senha">
+      <button>Entrar</button>
+    </form>
   </header>
   <script src="script.js"></script>
 </body>
