--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
 <body>
   <header class="header">
     <img src="images/trybewarts-header-logo.svg" alt="" class="trybewarts-header-logo">
-    <form action="" class="trybewarts-login">
-      <input type="email" name="email" id="" placeholder="Email">
-      <input type="number" name="password" id="" placeholder="Senha">
-      <button>Entrar</button>
+
+    <h1 id="trybewarts-header-title">Trybewarts</h1>
+
+    <form action="" class="trybewarts-login" method="get">
+      <input type="email" name="email" id="fieldEmail" placeholder="Email">
+      <input type="password" name="password" id="fieldSenha" placeholder="Senha">
+      <button id="btn-login">Entrar</button>
     </form>
   </header>
   <script src="script.js"></script>
