--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <form action="" id="evaluation-form">
 
     </form>
+
+    <img src="images/trybewarts-colored.svg" alt="" id="trybewarts-forms-logo">
   </main>
   <script src="script.js"></script>
 </body>
