--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     </form>
 
-    <img src="images/trybewarts-colored.svg" alt="" id="trybewarts-forms-logo">
+    <img src="images/trybewarts-colored.svg" alt="" id="trybewarts-forms-logo" height="500px">
   </main>
   <script src="script.js"></script>
 </body>
