--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
 
   <main>
     <form action="" id="evaluation-form">
+      <label for="input-name">
+        <input type="text" placeholder="Nome" id="input-name">
+      </label>
+      <label for="input-lastname">
+        <input type="text" placeholder="Sobrenome" id="input-lastname">
+      </label>
+      <label for="input-email">
+        <input type="email" name="input-email" id="input-email" placeholder="Email">
+      </label>
 
     </form>
 
