--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1 id="trybewarts-header-title">Trybewarts</h1>
 
     <form action="" class="trybewarts-login" method="get">
-      <input type="email" name="email" id="fieldEmail" placeholder="Email">
+      <input type="text" name="email" id="fieldEmail" placeholder="Email">
       <input type="password" name="password" id="fieldSenha" placeholder="Senha">
       <button id="btn-login">Entrar</button>
     </form>
