--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
         <input type="email" name="input-email" id="input-email" placeholder="Email">
       </label>
 
+      <select id="house">
+        <option value="Gitnória" id="gitnoria-house">Gitnória</option>
+        <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
+        <option value="Corvinode" id="corvinode-house">Corvinode</option>
+        <option value="Pytherina" id="pytherina-house">Pytherina</option>
+      </select>
+
     </form>
 
     <img src="images/trybewarts-colored.svg" alt="" id="trybewarts-forms-logo" height="500px">
