--- a/index.html
+++ b/index.html
@@ -32,17 +32,19 @@
           <input type="text" placeholder="Sobrenome" id="input-lastname">
         </label>
       </section>
-    
-      <label for="input-email">
-        <input type="email" name="input-email" id="input-email" placeholder="Email">
-      </label>
 
-      <select id="house">
-        <option value="Gitnória" id="gitnoria-house">Gitnória</option>
-        <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
-        <option value="Corvinode" id="corvinode-house">Corvinode</option>
-        <option value="Pytherina" id="pytherina-house">Pytherina</option>
-      </select>
+      <section class="coluna2">
+        <label for="input-email">
+          <input type="email" name="input-email" id="input-email" placeholder="Email">
+        </label>
+
+        <select id="house">
+          <option value="Gitnória" id="gitnoria-house">Gitnória</option>
+          <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
+          <option value="Corvinode" id="corvinode-house">Corvinode</option>
+          <option value="Pytherina" id="pytherina-house">Pytherina</option>
+        </select>
+      </section>
 
     </form>
 
