--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
         </select>
       </section>
 
+      <label id="label-family">Qual sua família?</label>
+      <section class="coluna3">
+        <input type="radio" name="family" id="" value="Frontend">
+        <input type="radio" name="family" id="" value="Backend">
+        <input type="radio" name="family" id="" value="FullStack">
+      </section>
+
     </form>
 
     <img src="images/trybewarts-colored.svg" alt="" id="trybewarts-forms-logo" height="500px">
