--- a/index.html
+++ b/index.html
@@ -48,9 +48,19 @@
 
       <label id="label-family">Qual sua família?</label>
       <section class="coluna3">
-        <input type="radio" name="family" id="" value="Frontend">
-        <input type="radio" name="family" id="" value="Backend">
-        <input type="radio" name="family" id="" value="FullStack">
+        <input type="radio" name="family" class="" value="Frontend">
+        <input type="radio" name="family" class="" value="Backend">
+        <input type="radio" name="family" class="" value="FullStack">
+      </section>
+
+      <label for="" id="label-content">Qual conteúdo você está com mais vontade de aprender?</label>
+      <section class="coluna4">
+        <input type="checkbox" name="" class="subject" value="HoFs">
+        <input type="checkbox" name="" class="subject" value="Jest">
+        <input type="checkbox" name="" class="subject" value="Promises">
+        <input type="checkbox" name="" class="subject" value="React">
+        <input type="checkbox" name="" class="subject" value="SQL">
+        <input type="checkbox" name="" class="subject" value="Python">
       </section>
 
     </form>
