--- a/index.html
+++ b/index.html
@@ -63,6 +63,20 @@
         <input type="checkbox" name="" class="subject" value="Python">
       </section>
 
+      <label for="" id="label-rate">Como você avalia a Trybewarts?</label>
+      <section class="coluna5">
+        <input type="radio" name="rate" id="" value="1">
+        <input type="radio" name="rate" id="" value="2">
+        <input type="radio" name="rate" id="" value="3">
+        <input type="radio" name="rate" id="" value="4">
+        <input type="radio" name="rate" id="" value="5">
+        <input type="radio" name="rate" id="" value="6">
+        <input type="radio" name="rate" id="" value="7">
+        <input type="radio" name="rate" id="" value="8">
+        <input type="radio" name="rate" id="" value="9">
+        <input type="radio" name="rate" id="" value="10">
+      </section>
+
     </form>
 
     <img src="images/trybewarts-colored.svg" alt="" id="trybewarts-forms-logo" height="500px">
