--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
         <input type="radio" name="rate" id="" value="10">
       </section>
 
+      <label for="" class="textarea">Deixe seu comentário:</label>
+      <textarea name="" id="" cols="30" rows="10" maxlength="500"></textarea>
     </form>
 
     <img src="images/trybewarts-colored.svg" alt="" id="trybewarts-forms-logo" height="500px">
