--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
 
       <label for="" class="textarea">Deixe seu comentário:</label>
       <textarea name="" id="" cols="30" rows="10" maxlength="500"></textarea>
+
+      <section class="concordo">
+        <label for="agreement" id="label-infos">Você concorda com o uso das informações acima?</label>
+        <input type="checkbox" name="" id="agreement">
+      </section>
+      
     </form>
 
     <img src="images/trybewarts-colored.svg" alt="" id="trybewarts-forms-logo" height="500px">
