--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <input type="checkbox" name="" id="agreement">
       </section>
       
-      <button type="submit" id="submit-btn">Enviar</button>
+      <button type="submit" id="submit-btn" disabled>Enviar</button>
     </form>
 
     <img src="images/trybewarts-colored.svg" alt="" id="trybewarts-forms-logo" height="500px">
