--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
 
     <img src="images/trybewarts-colored.svg" alt="" id="trybewarts-forms-logo" height="500px">
   </main>
+
+  <footer>Direitos reservados à Trybewarts©</footer>
   <script src="script.js"></script>
 </body>
 
