--- a/index.html
+++ b/index.html
@@ -48,37 +48,38 @@
 
       <label id="label-family">Qual sua família?</label>
       <section class="coluna3">
-        <input type="radio" name="family" class="" value="Frontend">
-        <input type="radio" name="family" class="" value="Backend">
-        <input type="radio" name="family" class="" value="FullStack">
+        <input type="radio" name="family" class="" value="Frontend"> Front-End
+        <input type="radio" name="family" class="" value="Backend"> Back-End
+        <input type="radio" name="family" class="" value="FullStack"> Full-Stack
       </section>
 
       <label for="" id="label-content">Qual conteúdo você está com mais vontade de aprender?</label>
       <section class="coluna4">
-        <input type="checkbox" name="" class="subject" value="HoFs">
-        <input type="checkbox" name="" class="subject" value="Jest">
-        <input type="checkbox" name="" class="subject" value="Promises">
-        <input type="checkbox" name="" class="subject" value="React">
-        <input type="checkbox" name="" class="subject" value="SQL">
-        <input type="checkbox" name="" class="subject" value="Python">
+        <input type="checkbox" name="" class="subject" value="HoFs"> HoFs
+        <input type="checkbox" name="" class="subject" value="Jest"> Jest
+        <input type="checkbox" name="" class="subject" value="Promises"> Promisses
+        <input type="checkbox" name="" class="subject" value="React"> React
+        <input type="checkbox" name="" class="subject" value="SQL"> SQL
+        <input type="checkbox" name="" class="subject" value="Python"> Python
       </section>
 
       <label for="" id="label-rate">Como você avalia a Trybewarts?</label>
       <section class="coluna5">
-        <input type="radio" name="rate" id="" value="1">
-        <input type="radio" name="rate" id="" value="2">
-        <input type="radio" name="rate" id="" value="3">
-        <input type="radio" name="rate" id="" value="4">
-        <input type="radio" name="rate" id="" value="5">
-        <input type="radio" name="rate" id="" value="6">
-        <input type="radio" name="rate" id="" value="7">
-        <input type="radio" name="rate" id="" value="8">
-        <input type="radio" name="rate" id="" value="9">
-        <input type="radio" name="rate" id="" value="10">
+        <input type="radio" name="rate" id="" value="1"> 1
+        <input type="radio" name="rate" id="" value="2"> 2
+        <input type="radio" name="rate" id="" value="3"> 3
+        <input type="radio" name="rate" id="" value="4"> 4
+        <input type="radio" name="rate" id="" value="5"> 5
+        <input type="radio" name="rate" id="" value="6"> 6
+        <input type="radio" name="rate" id="" value="7"> 7
+        <input type="radio" name="rate" id="" value="8"> 8
+        <input type="radio" name="rate" id="" value="9"> 9
+        <input type="radio" name="rate" id="" value="10"> 10
       </section>
 
       <label for="" class="textarea">Deixe seu comentário:</label>
-      <textarea name="" id="" cols="30" rows="10" maxlength="500"></textarea>
+      <textarea name="" id="textarea" cols="30" rows="10" maxlength="500"></textarea>
+      <span id="counter"></span>
 
       <section class="concordo">
         <label for="agreement" id="label-infos">Você concorda com o uso das informações acima?</label>
